update makefile to reflect change in dependency build structure

--- a/rewrite/Makefile
+++ b/rewrite/Makefile
@@ -5,13 +5,13 @@ OBJECTS = $(patsubst %.c, build/%.o, $(FILES))
 
 DEPENDENCIES = libh
 CFLAGS := -I$(DEPENDENCIES)
-LDFLAGS := -L./$(DEPENDENCIES) -l:$(DEPENDENCIES).a
+LDFLAGS := -L./$(DEPENDENCIES)/build -l:$(DEPENDENCIES).a
 
 build/$(PROG_NAME): $(OBJECTS)
 	$(MAKE) -C $(DEPENDENCIES) # build libh dependencies before final target
 	$(CC) -o $@ $^ $(LDFLAGS)
 
-build/%.o : %.c
+build/%.o: %.c
 	mkdir -p $(dir $@)
 	$(CC) -o $@ $< -c $(CFLAGS)
 
